# rocm-migraphx

./: .gitmodules  README.md
accuracy/: build_migraphx_accuracy.sh  dockerfile  run_bertmrpc.sh  run_imagenet.sh  run_mnist.sh
datasets/glue/: README.txt  download_glue_data.py  generate_tst.sh  glue_dump.sh  tokenize.sh
datasets/imagenet/: README.txt
datasets/mnist/: README.md  download.sh
dockerfiles/: build_migraphx_docker.sh  dockerfile  dockerfile-cpu-target  dockerfile-daily  dockerfile-hipclang  dockerfile-mlir  dockerfile-mlir-base  dockerfile-ort  dockerfile-ort-migraphx  dockerfile-ort-tensorrt  dockerfile-ort2  dockerfile-ort3  dockerfile-osdb  dockerfile-pkg  dockerfile-pkg-update  dockerfile-rocm35  dockerfile-rocm35-12  dockerfile-rocm35-12-migraphx  dockerfile-rocm35-migraphx  dockerfile-rocm351  dockerfile-rocm351-migraphx  dockerfile-tf-pytorch  patch.ort_rocm54_fix
dockerfiles/miopen-rocm35/: miopen_1.0.0.udb
dockerfiles/miopen-rocm37/: gfx906_60.HIP.2_6_0_8145-rocm-rel-3.7-20-c16087a4.ufdb.txt  miopen_1.0.0.udb
dockerfiles/miopen-rocm38/: gfx906_60.HIP.2_6_0_8164-rocm-rel-3.8-30-347f7f3f.ufdb.txt  miopen_1.0.0.udb
dockerfiles/miopen-rocm40/: gfx906_60.HIP.2_9_0_8250-rocm-rel-4.0-20-8a4af47d.ufdb.txt  miopen_1.0.0.udb
perf-compare/: README.txt
saved-models/: README.txt
scripts/: bench.py  build_migraphx-rocm35.sh  build_migraphx.sh  build_migraphx_all.sh  build_migraphx_cpu.sh  build_migraphx_cputarget.sh  build_migraphx_deb_pkg.sh  build_migraphx_deb_pkg_update.sh  build_migraphx_docker.sh  build_migraphx_docker_latest.sh  build_migraphx_mlir.sh  build_migraphx_osdb.sh  build_migraphx_rocm35.sh  build_migraphx_rocm351.sh  build_ort_docker.sh  build_prereqs.sh  build_rocm35-12.sh  build_rocm35.sh  driver_perf.sh  ort_benchmark.sh  ort_benchmark2.sh  ort_benchmark4.sh  ort_benchmark5.sh  run_bench.sh  run_check.sh  run_docker.sh  run_docker_cpu.sh  run_imagenet.sh  run_ndocker.sh  run_ort_check.sh  run_ort_cpu.sh  run_ort_cuda.sh  run_ort_infer.sh  run_ort_mev.sh  run_ort_migraphx.sh  run_ort_ngraph.sh  run_ort_openvino.sh  run_ort_rocm.sh  run_ort_tensorrt.sh  run_perf.sh  (+3 more)
tools/: README.txt  build-onnxruntime.sh  build-tf-cpu-1.12.sh  build-tf-cpu-1.13.sh  build-tf-cpu-2.3.sh
tools/migx/: CMakeLists.txt  README.txt  build_migx.sh
tools/migx/src/: fileinput.cpp  glue.cpp  image.cpp  imagenet.cpp  migx.cpp  migx.hpp  mnist.cpp
(+305 files in other folders)
